--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,51 @@
 .background {
   position: relative;
-  z-index: -1;
   width: 100%;
   height: 100%;
-  background-image: url(./img/background.jpg);
-  background-size: 100%;
 }
+#root {
+  position: relative;
+}
+body {
+  position: relative;
+}
+
+
 .App {
+  position: relative;
   width: 100%;
   height: 100vh;
+  background-image: url(./img/background.jpg);
+  background-size: cover;
+}
+.App-nobackground{
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
 }
 .logowrapper {
-  position: 'absolute';
+  position: absolute;
   display: block;
-  top: '50%';
-  left: '30%';
+  top: 50%;
+  left: 30%;
+}
+.register-login{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: white;
+}
+.profile-modal{
+  width: 945px;
+  height: 570px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background-color: white;
+}
+.card-column{
+  background-color: yellow;
 }
