--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@ body {
   position: relative;
 }
 
-
 .App {
   position: relative;
   width: 100%;
@@ -18,7 +17,7 @@ body {
   background-image: url(./img/background.jpg);
   background-size: cover;
 }
-.App-nobackground{
+.App-nobackground {
   position: relative;
   width: 100%;
   height: 100vh;
@@ -30,22 +29,25 @@ body {
   top: 50%;
   left: 30%;
 }
-.register-login{
+.register-login {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translateY(-50%);
   background-color: white;
 }
-.profile-modal{
-  width: 945px;
-  height: 570px;
+.profile-modal {
+  max-width: 545px;
+  height: auto;
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   background-color: white;
 }
-.card-column{
+.profile-container {
+  margin: 40px;
+}
+.card-column {
   background-color: yellow;
 }
