--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ body {
   width: 100%;
   height: 100vh;
   background-size: cover;
+  overflow: hidden;
 }
 .logowrapper {
   position: absolute;
@@ -50,4 +51,10 @@ body {
 }
 .card-column {
   background-color: yellow;
+}
+.order-form{
+  position: absolute;
+  top: 150px;
+  left: 150px;
+  z-index:1000;
 }
