--- a/src/App.css
+++ b/src/App.css
@@ -57,4 +57,8 @@ body {
   top: 150px;
   left: 150px;
   z-index:1000;
+  max-width: 300px;
+  background-color: #FFFFFF;
+  padding: 40px;
+  opacity: 0.9;
 }
